--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -202,7 +202,7 @@ CineCameraComponent=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.Tran
 SpringArmComponent=SpringArmComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup
 PropertyWrapper=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces
 BP_DI_CarpNew_C=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,BP_DI_CarpNew_C.TransformCommon.Transform,BP_DI_CarpNew_C.Materials.MaterialList,BP_DI_CarpNew_C.Physics.ConstraintsGroup,BP_DI_CarpNew_C.Collision.Collision
-SceneComponent=
+SceneComponent=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CineCameraComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces,GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
 PlayerStart=CapsuleComponent.Physics.ConstraintsGroup,CineCameraComponent.TransformCommon.Transform,DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces,GameMapsSettings.DefaultModes.SelectedGameModeDetails,MoviePlayerSettings.Movies.StartupMovies,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options
 EdGraph=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CineCameraComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces
 BP_Player_DI_C=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.TransformCommon.Transform,DI_Player_C.Physics.ConstraintsGroup,DI_Player_C.Collision.Collision,CineCameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_DI_C.TransformCommon.Transform,LevelScriptBlueprint.Interfaces.Implemented Interfaces
@@ -437,6 +437,7 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
@@ -466,7 +467,7 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
+OpenAssetsAtExit=/Game/_Core/_AdriaanNewShit/Player/BP_Player_DI.BP_Player_DI
 
 [RootWindow]
 ScreenPosition=X=116.000 Y=80.000
@@ -2796,6 +2797,9 @@ VolumetricCloud.Cooking=True
 VolumetricCloud.Replication=True
 VolumetricCloud.Networking=True
 VolumetricCloud.Actor=True
+BP_Player_DI_C.Save Game=True
+BP_Player_DI_C.SaveGame=True
+BP_Player_DI_C.PlayerStats=True
 
 [AssetEditorToolkitTabLocation]
 /Game/_Core/_Player/DI_Player.DI_Player=1
@@ -3005,7 +3009,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/_Level/_LevelAssets/_Props/_Materials
+ContentBrowserTab1.SelectedPaths=/Game/_Core/_AdriaanNewShit/Player
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -4357,36 +4361,36 @@ RecentsFiles=D:/Program Files/Epic Games/UE_5.3/Engine/Plugins/MovieScene/MovieR
 RecentsFiles=D:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Level/_LevelAssets/_Props/_Outside/Dumpster_Large
-MRUItem1=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_Hung2
-MRUItem2=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_Hung1
-MRUItem3=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_Side2
-MRUItem4=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_Side1
-MRUItem5=/Game/_Level/_LevelAssets/_Props/Bodies/Torso_Part
-MRUItem6=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_Wall1
-MRUItem7=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_Wall2
-MRUItem8=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk
-MRUItem9=/Game/_Core/_Enemies/BP_Kronen
-MRUItem10=/Game/_Core/_Enemies/Kronen_Female/APB_KronenFemale
-MRUItem11=/Game/_Level/_LevelAssets/_Props/Bodies/KronenCorpse_Female1
-MRUItem12=/Game/_Level/_LevelAssets/_Props/Bodies/KronenCorpse_Male2
-MRUItem13=/Game/_Level/_LevelAssets/_Props/Bodies/KronenCorpse_Male5
-MRUItem14=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_LayDown2
-MRUItem15=/Game/_Level/_LevelAssets/_Props/Bodies/Leg_Part
-MRUItem16=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_LayUp2
-MRUItem17=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse6_Texture
-MRUItem18=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse6_Mat
-MRUItem19=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse2_Mat
-MRUItem20=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_LayDown1
-MRUItem21=/Game/_Level/_LevelAssets/_Props/Bodies/Head_Part
-MRUItem22=/Game/_Level/_LevelAssets/_Props/Bodies/KronenCorpse_Male1
-MRUItem23=/Game/_Level/_LevelAssets/_Environment_Assets/fence/fence
-MRUItem24=/Game/_Level/_LevelAssets/_Props/_Materials/Junk_Pile_Texture
-MRUItem25=/Game/_Level/_LevelAssets/_Props/_Materials/Junk_Pile_Mat
-MRUItem26=/Game/_Level/_LevelAssets/_Props/_Materials/Garbage_Pile_Texture
-MRUItem27=/Game/_Level/_LevelAssets/_Props/_Materials/Garbage_Pile_Mat
-MRUItem28=/Game/_Level/_LevelAssets/_Props/Bodies/KronenCorpse_Female2
-MRUItem29=/Game/_Level/_LevelAssets/_Props/_Outside/Dumpster
+MRUItem0=/Game/_Core/_AdriaanNewShit/Player/BP_Player_DI
+MRUItem1=/Game/_Level/_LevelAssets/_Props/_Outside/Dumpster_Large
+MRUItem2=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_Hung2
+MRUItem3=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_Hung1
+MRUItem4=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_Side2
+MRUItem5=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_Side1
+MRUItem6=/Game/_Level/_LevelAssets/_Props/Bodies/Torso_Part
+MRUItem7=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_Wall1
+MRUItem8=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_Wall2
+MRUItem9=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk
+MRUItem10=/Game/_Core/_Enemies/BP_Kronen
+MRUItem11=/Game/_Core/_Enemies/Kronen_Female/APB_KronenFemale
+MRUItem12=/Game/_Level/_LevelAssets/_Props/Bodies/KronenCorpse_Female1
+MRUItem13=/Game/_Level/_LevelAssets/_Props/Bodies/KronenCorpse_Male2
+MRUItem14=/Game/_Level/_LevelAssets/_Props/Bodies/KronenCorpse_Male5
+MRUItem15=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_LayDown2
+MRUItem16=/Game/_Level/_LevelAssets/_Props/Bodies/Leg_Part
+MRUItem17=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_LayUp2
+MRUItem18=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse6_Texture
+MRUItem19=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse6_Mat
+MRUItem20=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse2_Mat
+MRUItem21=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_LayDown1
+MRUItem22=/Game/_Level/_LevelAssets/_Props/Bodies/Head_Part
+MRUItem23=/Game/_Level/_LevelAssets/_Props/Bodies/KronenCorpse_Male1
+MRUItem24=/Game/_Level/_LevelAssets/_Environment_Assets/fence/fence
+MRUItem25=/Game/_Level/_LevelAssets/_Props/_Materials/Junk_Pile_Texture
+MRUItem26=/Game/_Level/_LevelAssets/_Props/_Materials/Junk_Pile_Mat
+MRUItem27=/Game/_Level/_LevelAssets/_Props/_Materials/Garbage_Pile_Texture
+MRUItem28=/Game/_Level/_LevelAssets/_Props/_Materials/Garbage_Pile_Mat
+MRUItem29=/Game/_Level/_LevelAssets/_Props/Bodies/KronenCorpse_Female2
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -4743,7 +4747,7 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 Object=
 StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
@@ -4759,7 +4763,7 @@ Character="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.C
 Pawn="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 DI_Player_C="\"Object.Player Variables.CamTransform\" \"Object.Player Variables.NewVar\" \"Object.Pawn.Pawn|Input\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Replication.ReplicatedMovement\" "
 BP_DI_CarpNew_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" "
-BP_Player_DI_C=
+BP_Player_DI_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[0].Modifiers\" \"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[1].Modifiers\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[2].Modifiers\" \"Object.Mappings.Mappings.Mappings[3]\" "
 SkeletalMeshComponent=
 SkinnedMeshComponent=
@@ -4770,7 +4774,7 @@ Widget=
 Visual=
 LevelStreamingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WorldSettings="\"Object.Lightmass.LightmassSettings\" \"Object.HLODSystem.HierarchicalLODSetup\" \"Object.HLODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" "
-Info=
+Info="\"Object.Lightmass.LightmassSettings\" \"Object.HLODSystem.HierarchicalLODSetup\" \"Object.HLODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" "
 CineCameraSettings="\"Object.Lens.LensPresets\" \"Object.Lens.LensPresets.LensPresets[0]\" \"Object.Lens.LensPresets.LensPresets[0].LensSettings\" \"Object.Lens.LensPresets.LensPresets[1]\" \"Object.Lens.LensPresets.LensPresets[1].LensSettings\" \"Object.Lens.LensPresets.LensPresets[2]\" \"Object.Lens.LensPresets.LensPresets[2].LensSettings\" \"Object.Lens.LensPresets.LensPresets[3]\" \"Object.Lens.LensPresets.LensPresets[3].LensSettings\" \"Object.Lens.LensPresets.LensPresets[4]\" \"Object.Lens.LensPresets.LensPresets[4].LensSettings\" \"Object.Lens.LensPresets.LensPresets[5]\" \"Object.Lens.LensPresets.LensPresets[5].LensSettings\" \"Object.Lens.LensPresets.LensPresets[6]\" \"Object.Lens.LensPresets.LensPresets[6].LensSettings\" \"Object.Lens.LensPresets.LensPresets[7]\" \"Object.Lens.LensPresets.LensPresets[7].LensSettings\" \"Object.Lens.LensPresets.LensPresets[8]\" \"Object.Lens.LensPresets.LensPresets[8].LensSettings\" \"Object.Filmback.FilmbackPresets\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[0]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[0].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[1]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[1].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[10]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[10].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[11]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[11].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[12]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[12].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[2]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[2].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[3]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[3].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[4]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[4].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[5]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[5].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[6]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[6].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[7]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[7].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[8]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[8].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[9]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[9].FilmbackSettings\" \"Object.Crop.CropPresets\" \"Object.Crop.CropPresets.CropPresets[0]\" \"Object.Crop.CropPresets.CropPresets[1]\" \"Object.Crop.CropPresets.CropPresets[2]\" \"Object.Crop.CropPresets.CropPresets[3]\" "
 DeveloperSettings=
 ConsoleSettings="\"Object.Colors.InputColor\" \"Object.Colors.HistoryColor\" \"Object.Colors.AutoCompleteCommandColor\" \"Object.Colors.AutoCompleteCVarColor\" \"Object.Colors.AutoCompleteFadedColor\" "
