Renamed Male Kronen asset
Renamed assets tied to male kronen

--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -470,12 +470,11 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
-OpenAssetsAtExit=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchWithTracker.CamSwitchWithTracker
 
 [RootWindow]
 ScreenPosition=X=116.000 Y=80.000
 WindowSize=X=1532.000 Y=820.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [DetailCategories]
 DI_Player_C.TransformCommon=True
@@ -2992,7 +2991,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/
+ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Kronen_Male/Textures/Kronen_Male_003
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
