--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -438,7 +438,7 @@ SphereComponent=DI_BP_Carpenter_C.TransformCommon.Transform,DI_Player_C.Transfor
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=
@@ -470,12 +470,11 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
-OpenAssetsAtExit=/Game/_Core/_Enemies/_Animations/ABP_KrononSlow.ABP_KrononSlow
 
 [RootWindow]
 ScreenPosition=X=116.000 Y=80.000
 WindowSize=X=1532.000 Y=820.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [DetailCategories]
 DI_Player_C.TransformCommon=True
@@ -2803,6 +2802,8 @@ VolumetricCloud.Actor=True
 BP_Player_DI_C.Save Game=True
 BP_Player_DI_C.SaveGame=True
 BP_Player_DI_C.PlayerStats=True
+AnimGraphNode_Root.Functions=True
+AnimGraphNode_Root.Tag=True
 
 [AssetEditorToolkitTabLocation]
 /Game/_Core/_Player/DI_Player.DI_Player=1
@@ -3013,7 +3014,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/_Core/_AdriaanNewShit/Player
+ContentBrowserTab1.SelectedPaths=/Game/_Core/_Enemies/_Animations
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
